added uploadId to ROW_SOURCE and skip records in case of resuming ingestions